# ljubijankic-leptos-rs

./: .gitignore  CNAME  Cargo.toml  index.html
.github/workflows/: gh-pages-deploy.yml
data/: project-cat.json  projects.json
src/: main.rs
src/app/: mod.rs
src/app/about/: mod.rs
src/app/contact/: mod.rs
src/app/home/: mod.rs
src/app/projects/: mod.rs
style/: tailwind.css
