[package]
name = "ljubijankic-leptos-rs"
authors = ["Admir Ljubijankić"]
description = "Personal portfolio website, using Leptos CSR"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.7.7", features = ["csr"] }
leptos_router = "0.7.7"
log = "0.4.25"
