[package]
name = "ljubijankic-leptos-rs"
authors = ["Admir Ljubijankić"]
description = "Personal portfolio website, using Leptos CSR"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.7.7", features = ["csr"] }
leptos_meta = "0.7.7"
leptos_router = "0.7.7"
log = "0.4.25"
chrono = "0.4.39"
serde = "1.0.218"
send_wrapper = "0.6.0"
web-sys = "0.3.77"
gloo-net = { version="0.6.0", features = ["json"] }
